求解斐波那契数列的若干方法.md

--- a/src/acwing/fibonacci/求解斐波那契数列的若干方法.md
+++ b/src/acwing/fibonacci/求解斐波那契数列的若干方法.md
@@ -1,6 +1,6 @@
-![1565357693701](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\1565357693701.png)
+![1565357693701](../../image/1565357693701.png)
 
-![1565357661436](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\1565357661436.png)
+![1565357661436](../../image/1565357661436.png)
 
 C++ 代码
 
@@ -13,7 +13,7 @@ int f(int n)
 }
 ```
 
-![1565357646159](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\1565357646159.png)
+![1565357646159](../../image/1565357646159.png)
 
 C++ 代码
 
@@ -30,7 +30,7 @@ int f2(int n)
 }
 ```
 
-![1565357611438](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\1565357611438.png)
+![1565357611438](../../image/1565357611438.png)
 
 C++代码
 
@@ -48,7 +48,7 @@ int f3(int n)
 }
 ```
 
-![1565357598126](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\1565357598126.png)
+![1565357598126](../../image/1565357598126.png)
 
 C++代码：
 
@@ -68,7 +68,7 @@ int f4(int n)
 }
 ```
 
-![1565357556193](C:\Users\hp\AppData\Roaming\Typora\typora-user-images\1565357556193.png)
+![1565357556193](../../image/1565357556193.png)
 
 C++代码
 
