--- a/src/acwing/一些题的解题思路图片.md
+++ b/src/acwing/一些题的解题思路图片.md
@@ -1,3 +1,7 @@
-1、
+##### 1、
+
 ![acwing 56.png NumberOf1Between1AndN_Solution.java](..\image\acwing 56.png)
 
+##### 2、
+
+![acwing 58 printMinNumber.java](..\image\acwing 58.png)
