--- a/src/acwing/一些题的解题思路图片.md
+++ b/src/acwing/一些题的解题思路图片.md
@@ -5,3 +5,5 @@
 ##### 2、
 
 ![acwing 58 printMinNumber.java](..\image\acwing 58.png)
+
+![acwing 59 GetTranslationCount.java](..\image\acwing 59.png)
