--- a/算法笔记导航.md
+++ b/算法笔记导航.md
@@ -1,4 +1,37 @@
 ###### 1、设置双指针
 
-​	比如删除排序数组中的重复项、移除数组中等于一个值等
+比如删除排序数组中的重复项、移除数组中等于一个值等
+####dp问题
+    都是转换为：加法原理和乘法原理
+    都是拆成两部分
+    1、状态怎么表示
+    2、状态怎么计算
+    3、考虑边界情况
+####双指针问题
+
+`核心：一定要有序，有序才能用双指针`
+
+做法：先想一下暴力怎么做，然后看有没有单调性
+
+    满足：第二个指针单调往后移动时，第一个指针也一定是同样的移动（包括往前移动）    
+###### 双指针的优化问题
+
+几乎所有的双指针考虑优化，都是看有没有`单调性`，两个指针都往同一方向移动。
+
+####从O(n<sup>2</sup>)优化到O(n)的方法
+
+    双指针算法
+    单调队列算法
+####DFS
+    1、弄清楚状态的含义
+    2、顺序（按照什么样的顺序递归枚举所有方案）
+####刷题
+1. 一定要把每一步的思路都搞懂(为什么要这么写)，而不要只停留在我会写上面。（一道题我知道怎么做，和我知道为什么这么做有很大区别）    
+2. 
+
+#### 链表
+
+```
+凡是需要特判头结点的题，都可以加一个虚拟头结点dummy
+```
 
