--- a/src/acwing/array/二分查找算法模板.md
+++ b/src/acwing/array/二分查找算法模板.md
@@ -33,6 +33,7 @@ int bsearch_2(int l, int r)
 {
     while (l < r)
     {
+        //这种情况考虑l=r-1时，l= mid，而mid=l，陷入死循环
         int mid = l + r + 1 >> 1;
         if (check(mid)) l = mid;
         else r = mid - 1;
@@ -40,3 +41,17 @@ int bsearch_2(int l, int r)
     return l;
 }
 ```
+
+计算mid时：+1或者不加，主要是为了防止死循环
+
+```
+一般写二分的思考顺序是这样的：首先通过题目背景和check(mid)函数的逻辑，判断答案落在左半区间还是右半区间。
+左右半区间的划分方式一共有两种：
+
+1、中点mid属于左半区间，则左半区间是[l, mid]，右半区间是[mid+1, r]，更新方式是r = mid;或者 l = mid + 1;，此时用第一个模板；
+2、中点mid属于右半区间，则左半区间是[l, mid-1]，右半区间是[mid, r]，更新方式是r = mid - 1;或者 l = mid;，此时用第二个模板；
+
+应用版本一：LeetCode 275. H-Index II;
+应用版本二：LeetCode 69. Sqrt(x) ;
+```
+
